<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/age"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:onClick="insertUser"
        android:text="@string/add_person" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/searchUser"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="-1dp"
        android:layout_marginLeft="-1dp"
        android:layout_marginTop="269dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:hint="@string/lastName"
        android:inputType="text" />

    <EditText
        android:id="@+id/age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lastName"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:hint="@string/age"
        android:inputType="text" />

    <EditText
        android:id="@+id/firstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="201dp"
        android:layout_marginEnd="-1dp"
        android:layout_marginRight="-1dp"
        android:hint="@string/firstName"
        android:inputType="text" />

    <ScrollView
        android:id="@+id/scrollUsersView"
        android:layout_width="wrap_content"
        android:layout_height="61dp"
        android:layout_alignTop="@+id/searchUser"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="31dp"
        android:layout_marginRight="31dp">

        <TextView
            android:id="@+id/usersTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>
    </ScrollView>

    <EditText
        android:id="@+id/searchUser"
        android:layout_width="272dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="163dp"
        android:layout_marginRight="163dp"
        android:queryHint="@string/search"
        tools:layout_editor_absoluteX="106dp"
        tools:layout_editor_absoluteY="45dp" />

    <TextView
        android:id="@+id/userTextView"
        android:layout_width="163dp"
        android:layout_height="39dp"
        android:layout_below="@+id/searchUser"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="115dp"
        android:layout_marginLeft="115dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="150dp"
        android:layout_marginRight="150dp"
        android:layout_marginBottom="19dp"
        android:text="@string/users"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/searchUserTextView"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_below="@+id/searchUser"
        android:layout_alignStart="@+id/searchUser"
        android:layout_alignLeft="@+id/searchUser"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="161dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:onClick="findUser"
        android:text="@string/search" />

    <Button
        android:id="@+id/update_user_list_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:onClick="getAllUsers"
        android:text="@string/update_user_list" />

</RelativeLayout>